# railguey

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PYPI-PLAN.md  README.md  SECURITY.md  WHY-NOT-RAILWAY-APP.md  WHY-RAILGUEY.md  pyproject.toml  server.py
.codex-plugin/: plugin.json
.docket/: docket.json
.docket/tasks/: TASK-0001 - fix-version-single-source-of-truth-across-all-eido.md  TASK-0003 - add-type-pypi-package-to-railguey-service-registry.md
.forge/: manifest.yaml
.github/workflows/: ci.yml  publish.yml
.governor/: config.yaml
.ike/: ike.json
.ike/tasks/: TASK-0002 - add-ci-guardrails-tag-version-changelog-entry-requ.md  TASK-0004 - implement-passive-pypi-drift-detection-in-railguey.md
.research/: DECISION.md  research.json
.research/candidates/: full-automation.md  minimal-fix.md  railguey-pypi.md
.research/evaluations/: decision-criteria.md  peer-review.md  scoring-matrix.md
.research/findings/: 0001-trusted-publishing-is-the-security-standard.md  0002-hatchling-is-the-recommended-build-system-for-new-projects.md  0003-semantic-release-pays-off-at-scale-not-for-small-projects.md  0004-two-file-version-sync-is-a-known-anti-pattern.md  0005-no-existing-tool-bridges-pypi-artifact-state-with-railway-deployments.md  0006-railguey-service-registry-already-supports-the-artifact-pattern.md
.telos/: config.yaml
.telos/north_stars/: ns_b1e40bdf0c88.yaml
.visionlog/adr/: ADR-001-pypi-release-pipeline-minimal-fix-railguey-artifac.md
docs/: railway-agent-ssh.md
examples/: deploy-multi-service.yml  deploy-with-tests.yml  deploy.yml
railguey/: __init__.py  cli.py  mcp.py  server.py
railguey/lib/: __init__.py  accounts.py  cli_backend.py  doctor.py  graphql.py  login.py  orchestrate.py  popup.py  pypi.py  research.py  token.py  tools.py  totp.py
registry/: eidos-registry.yaml  service-registry.yaml
ship/: README.md
skills/use-railguey/: SKILL.md
tests/: conftest.py  helpers.py  test_cli.py  test_doctor.py  test_graphql.py  test_integration.py  test_login.py  test_orchestrate.py  test_popup.py  test_research.py  test_runner.py  test_token.py  test_tools.py
