[project]
name = "railguey"
version = "0.6.0"
description = "Project-scoped Railway CLI — reads RAILWAY_TOKEN from .env.local, no login needed"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Shanklin", email = "daniel@eidosagi.com" },
]
keywords = ["railway", "cli", "deploy", "devops", "ci-cd"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
railguey = "railguey.cli:main"

[project.urls]
Homepage = "https://github.com/eidos-agi/railguey"
Repository = "https://github.com/eidos-agi/railguey"
Issues = "https://github.com/eidos-agi/railguey/issues"
Changelog = "https://github.com/eidos-agi/railguey/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["railguey"]

[tool.ruff.lint.per-file-ignores]
"tests/test_integration.py" = ["E402", "F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
